[package]
name = "warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.7", features = ["derive"]}
librclone = "0.8"
libwarp = {path = "../libwarp" }
time = "0.3.36"
termion = "4.0"
