[package]
name = "warpcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5", features = ["derive"]}
librclone = "0.8"
warp = {path = "../libwarp" }
time = "0.3"
termion = "4.0"
